# libqapt

./: .gitignore  .krazy  .reviewboardrc  CMakeLists.txt  ChangeLog  HACKING  Mainpage.dox  Messages.sh  QAptConfig.cmake.in  TODO  doxy.config.in  libqapt.pc.cmake  qapt.pc.cmake  qaptversion.h.cmake
autotests/: CMakeLists.txt  dependencyinfotest.cpp  sourceslisttest.cpp  sourceslisttest.h  transactionerrorhandlingtest.cpp
autotests/data/: test1.list  test2.list
cmake/modules/: FindAptPkg.cmake  FindGLIB2.cmake  FindGStreamer.cmake  FindPolkitQt-1.cmake  FindQApt.cmake  MacroLogFeature.cmake  QAptConfig.cmake
example/: CMakeLists.txt  cacheupdatewidget.cpp  cacheupdatewidget.h  commitwidget.cpp  commitwidget.h  main.cpp  qapttest.cpp  qapttest.h
includes/: Backend  CMakeLists.txt  Cache  Changelog  Config  DebFile  DependencyInfo  DownloadProgress  Globals  History  MarkingErrorInfo  Package  SourceEntry  SourcesList  Transaction
src/: CMakeLists.txt  backend.cpp  backend.h  cache.cpp  cache.h  changelog.cpp  changelog.h  config.cpp  config.h  dbusinterfaces_p.h.cmake  debfile.cpp  debfile.h  dependencyinfo.cpp  dependencyinfo.h  downloadprogress.cpp  downloadprogress.h  globals.h  group.cpp  group.h  history.cpp  history.h  markingerrorinfo.cpp  markingerrorinfo.h  org.kubuntu.qaptbackend.xml  package.cpp  package.h  sourceentry.cpp  sourceentry.h  sourceslist.cpp  sourceslist.h  transaction.cpp  transaction.h  transaction_p.h  transactiondbus.cpp  transactiondbus.h  workerdbus.cpp  workerdbus.h
src/worker/: CMakeLists.txt  aptlock.cpp  aptlock.h  aptworker.cpp  aptworker.h  debug.cpp  debug.h  main.cpp  org.kubuntu.qaptworker.conf  org.kubuntu.qaptworker.conf.cmake  org.kubuntu.qaptworker.policy  org.kubuntu.qaptworker.policy.cmake  org.kubuntu.qaptworker.policy.in  org.kubuntu.qaptworker.service.cmake  org.kubuntu.qaptworker.service.in  org.kubuntu.qaptworker.transaction.xml  org.kubuntu.qaptworker.transaction.xml.cmake  org.kubuntu.qaptworker.xml  org.kubuntu.qaptworker.xml.cmake  org.kubuntu.qaptworker2.conf  org.kubuntu.qaptworker2.policy  org.kubuntu.qaptworker2.service.in  org.kubuntu.qaptworker2.transaction.xml  org.kubuntu.qaptworker2.xml  qaptauthorization.h  qaptworker.actions  qaptworker.actions.cmake  transaction.cpp  transaction.h  transactionadapter.cpp  transactionadapter.h  transactionqueue.cpp  transactionqueue.h  urihelper.h.cmake  worker.cpp  worker.h  workeracquire.cpp  workeracquire.h  workerdaemon.cpp  workerdaemon.h  (+2 more)
tests/: CMakeLists.txt  sourceslisttest.cpp  sourceslisttest.h  transactionerrorhandlingtest.cpp  transactionerrorhandlingtest.h
tests/data/: test1.list
utils/: CMakeLists.txt  Messages.sh
utils/plasma-runner-installer/: CMakeLists.txt  installerrunner.cpp  installerrunner.h  plasma-runner-installer.desktop
utils/qapt-batch/: CMakeLists.txt  detailswidget.cpp  detailswidget.h  main.cpp  qaptbatch.cpp  qaptbatch.h
utils/qapt-deb-installer/: CMakeLists.txt  ChangesDialog.cpp  ChangesDialog.h  DebCommitWidget.cpp  DebCommitWidget.h  DebInstaller.cpp  DebInstaller.h  DebViewer.cpp  DebViewer.h  main.cpp  qapt-deb-installer.desktop
utils/qapt-deb-thumbnailer/: CMakeLists.txt  DebThumbnailer.cpp  DebThumbnailer.h  debthumbnailer.desktop
utils/qapt-gst-helper/: CMakeLists.txt  GstMatcher.cpp  GstMatcher.h  PluginFinder.cpp  PluginFinder.h  PluginHelper.cpp  PluginHelper.h  PluginInfo.cpp  PluginInfo.h  main.cpp
utils/src/: CMakeLists.txt  main.cpp  qaptbatch.cpp
